# MakoClicker

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: build.bat  fetch_dependencies.bat
src/: gui.h  input_handler.h  keys.h  main.cpp  settings.h
